<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="60dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_name"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                />
            
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:id="@+id/name"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_when"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:stretchColumns="0"
                android:layout_height="wrap_content"
                >
                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textSize="20sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/monday"/>

                </TableRow>

                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:textSize="20sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/tuesday"/>

                </TableRow>

                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textSize="20sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/wednesday"/>

                </TableRow>
                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textSize="20sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/thursday"/>

                </TableRow>
                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textSize="20sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/friday"/>

                </TableRow>
                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textSize="20sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/saturday"/>

                </TableRow>
                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textSize="20sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/sunday"/>

                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_time"
                android:textAlignment="center"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/time"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dusty_rose"
                android:text="@string/done"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/done"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

    </ScrollView>


</LinearLayout>